# esp32_zephyr_pyapi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: esp32_zephyr_py_api_build.yml
src/esp32_zephyr_api/: __init__.py  _esp32_zephyr_api.py
tests/: esp32_zephyr_api_test.py
